--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#Services">Services</a></li>
             <li><a href="#Products">Products</a></li>
             <li><a href="./gallery.html">Our Collections</a></li>
-            <li><a href="./contactus.html">Contact</a></li>
+            <!-- <li><a href="./contactus.html">Contact</a></li> -->
         </ul>
         <img src="./css/menu.png" alt="" class="menu-btn">
     </nav>
@@ -196,7 +196,7 @@
     </section>
     <!------------------------------------------- 6th part : footer ------------------------------------->
     <section class="footer">
-        <p>S.NO 59/5/3, Plot No E-107, Lane No 6, near sai mandir, sai nagar, kondhwa bk, Haveli, Pune-411048</p>
+        <!-- <p>S.NO 59/5/3, Plot No E-107, Lane No 6, near sai mandir, sai nagar, kondhwa bk, Haveli, Pune-411048</p> -->
         <p>Nemichand Sutar - 9823683077 | sutharnemichand55@gmail.com</p>
     </section>
     <!-- mobile linking part -->
